# ruler

./: README.md  com.github.wctaylor.Ruler.json  com.github.wctaylor.ruler.json  meson.build  org.gnome.ruler.json
data/: com.github.wctaylor.Ruler.appdata.xml.in  com.github.wctaylor.Ruler.desktop.in  com.github.wctaylor.Ruler.gschema.xml  com.github.wctaylor.ruler.appdata.xml.in  com.github.wctaylor.ruler.desktop.in  com.github.wctaylor.ruler.gschema.xml  meson.build  org.gnome.ruler.appdata.xml.in  org.gnome.ruler.desktop.in  org.gnome.ruler.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  ruler.gresource.xml  ruler.in  window.py  window.ui
